# reja

./: Cargo.toml  README.md  flake.nix
src/: config.rs  main.rs  markdown.rs  ollama.rs  prompt.rs
