[package]
name = "reja"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.27.0", features = ["all-widgets"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
termimad = "0.29.4"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
toml = "0.8.16"
tui-textarea = "0.5.1"
